--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-      --mutedblack-color: rgb(5, 6, 7); /* A shade of blue */
-      --mistycloud-color: rgb(243, 243, 238); /* A shade of gray */
+      --mutedblack-color: rgb(5, 6, 7);
+      --mistycloud-color: rgb(243, 243, 238);
 }
 
 @font-face {
@@ -82,33 +82,44 @@
     font-style: italic;
 }
 
+
 html {
     cursor: pointer;
 }
 
-* {
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
-    overflow: hidden;
     background: var(--mutedblack-color);
-    background: url('glass\ background.jpg') no-repeat center center;
+    background: linear-gradient(rgba(5, 6, 7, 0.5), rgba(5, 6, 7, 0.5)), url('glass\ background.jpg');
     background-size: cover;
 }
 
-/* Hidden title until shatter */
 #main-title {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 5rem;
+    margin: 0; 
+    text-align: center;
+    font-size: 6vw;
     color: var(--mistycloud-color);
     font-family: Laurel;
     font-weight: bolder;
-    white-space: nowrap;
+}
+
+#broken-letterspacing {
+    letter-spacing: 20px;
+}
+
+#become-letterspacing {
+    letter-spacing: -8px;
+}
+
+@media only screen and (max-width: 768px) {
+    #main-title {
+        font-size:18vw; /* bigger font for small screens */
+        line-height: 80px;
+    }
 }
