--- a/style.css
+++ b/style.css
@@ -88,24 +88,29 @@ html {
 }
 
 body {
+    background: var(--mutedblack-color);
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+}
+
+#hero {
+    position: relative;
+    height: 100vh; /* Full viewport */
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background: var(--mutedblack-color);
-    background: linear-gradient(rgba(5, 6, 7, 0.5), rgba(5, 6, 7, 0.5)), url('glass\ background.jpg');
-    background-size: cover;
+    overflow: hidden;
 }
 
 #main-title {
-    position: absolute;
-    margin: 0; 
+    position: relative; /* allow scrolling */
+    margin: 50px auto;
     text-align: center;
     font-size: 6vw;
     color: var(--mistycloud-color);
-    font-family: Laurel;
+    font-family: 'Laurel';
     font-weight: bolder;
 }
 
@@ -119,7 +124,31 @@ body {
 
 @media only screen and (max-width: 768px) {
     #main-title {
-        font-size:18vw; /* bigger font for small screens */
+        font-size:18vw;
         line-height: 80px;
     }
+}
+
+#dynamic-bg {
+    position: fixed;
+    top: -50%;  /* extend beyond viewport */
+    left: -50%;
+    width: 210%;
+    height: 160%;
+    background: url('glass background.jpg') center/cover no-repeat;
+    filter: brightness(0.8) blur(1px);
+    transition: transform 0.1s ease-out;
+    z-index: -1;
+}
+.Section {
+    min-height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4vw;
+    color: var(--mistycloud-color);
+    text-align: center;
+    font-family: 'Laurel';
+    font-weight: bolder;
+    color: var(--mistycloud-color);
 }
